Fixed social media image sizing on small screens

--- a/index.css
+++ b/index.css
@@ -106,7 +106,7 @@ footer p {
     height: 75px;
   }
 
-  footer .social-media-link {
+  footer .social-media-img {
     width: 30px;
     height: 30px;
   }
